# Brendwall-product-API

./: .gitignore  README.md  setup.cfg
backend/: pyproject.toml  requirements.txt
backend/brendwall_product/: manage.py
backend/brendwall_product/brendwall_product/: asgi.py  settings.py  urls.py  wsgi.py
backend/brendwall_product/products/: constants.py  forms.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
backend/brendwall_product/products/migrations/: 0001_initial.py
backend/brendwall_product/products/templates/: index.html
backend/brendwall_product/static/products/js/: product_form.js
